# devops-masters-csd-ca1

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  zap-rules.tsv
.github/workflows/: ci.yaml  cicd.yaml  clean.yaml
BPCalc/: __init__.py
BPCalc/templates/: _layout.html.j2  index.html.j2
bpcalc/: __init__.py  bpplot.py
bpcalc-test/templates/: _layout.html.j2  index.html.j2
bpcalc/templates/: _layout.html.j2  index.html.j2
infra/: .terraform.lock.hcl  app.tf  backend.tf  iam.tf  vars.tf
tests/: conftest.py  load_test.js  test_core.py
tests/bdd/features/: bp_calculator.feature
tests/bdd/step_defs/: test_bp_calculator_steps.py
tests/e2e/: test_index_page.py  test_navigation.py
tests/features/: bp_calculator_feedback.feature  navigation.feature
tests/unit/: test_bpplot.py  test_core.py  test_routes.py
tests/unit/bdd/: test_bp_calculator_steps.py
tests/unit/bdd/features/: bp_calculator.feature
tests/unit/bdd/step_defs/: test_bp_calculator_steps.py
