[tool.poetry]
name = "bpcalc"
version = "0.1.0"
description = "Blood Preasure Calculator"
authors = ["Ben Stuart <ben@benstuart.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
