[tool.poetry]
name = "bpcalc"
version = "0.1.0"
description = "Blood Preasure Calculator"
authors = ["Ben Stuart <ben@benstuart.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
matplotlib = "^3.6.2"
opentelemetry-distro = "^0.35b0"
opentelemetry-instrumentation-flask = "^0.35b0"
requests = "^2.28.1"
opentelemetry-exporter-otlp = "^1.14.0"
opentelemetry-sdk-extension-aws = "^2.0.1"
opentelemetry-propagator-aws-xray = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
pytest-bdd = "^6.1.1"
lxml = "^4.9.1"
cssselect = "^1.2.0"
pytest-playwright = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
